crates/uitest/fixtures/ty_check/pat/record.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: crates/uitest/fixtures/ty_check/pat/record.fe
---
error[8-0002]: duplicated bidning `x` in the same pattern
   ┌─ record.fe:12:17
   │
12 │     let Foo {x, x}
   │              -  ^ `x` is already defined in the same pattern
   │              │   
   │              `x` is defined here

error[8-0002]: duplicated bidning `x` in the same pattern
   ┌─ record.fe:18:26
   │
18 │     let Bar::Variant {x, x}
   │                       -  ^ `x` is already defined in the same pattern
   │                       │   
   │                       `x` is defined here

error[8-0003]: duplicated `..` found
   ┌─ record.fe:13:24
   │
13 │     let Foo {x, .., y, ..}
   │                        ^^ `..` can be used only once

error[8-0003]: duplicated `..` found
   ┌─ record.fe:19:33
   │
19 │     let Bar::Variant {x, .., y, ..}
   │                                 ^^ `..` can be used only once

error[8-0009]: duplicated record field binding
   ┌─ record.fe:12:17
   │
12 │     let Foo {x, x}
   │              -  ^ duplicated field binding `x`
   │              │   
   │              first use of `x`

error[8-0009]: duplicated record field binding
   ┌─ record.fe:18:26
   │
18 │     let Bar::Variant {x, x}
   │                       -  ^ duplicated field binding `x`
   │                       │   
   │                       first use of `x`

error[8-0010]: specified field not found
   ┌─ record.fe:14:17
   │
14 │     let Foo {x, z}
   │                 ^ field `z` not found

error[8-0010]: specified field not found
   ┌─ record.fe:20:26
   │
20 │     let Bar::Variant {x, z}
   │                          ^ field `z` not found

error[8-0011]: explicit label is required
   ┌─ record.fe:15:17
   │
15 │     let Foo {x, Bar::Unit}
   │                 ^^^^^^^^^
   │                 │
   │                 explicit label is required
   │                 Consider using `Foo { x, y }` instead

error[8-0011]: explicit label is required
   ┌─ record.fe:21:26
   │
21 │     let Bar::Variant {x, Bar::Unit}
   │                          ^^^^^^^^^
   │                          │
   │                          explicit label is required
   │                          Consider using `Bar::Variant { x, y }` instead

error[8-0012]: all fields are not given
   ┌─ record.fe:16:13
   │
16 │     let Foo {x}
   │             ^^^
   │             │
   │             missing `y`
   │             Consider using `Foo { x, y }` instead

error[8-0012]: all fields are not given
   ┌─ record.fe:22:22
   │
22 │     let Bar::Variant {}
   │                      ^^
   │                      │
   │                      missing `x, y`
   │                      Consider using `Bar::Variant { x, y }` instead


